# api_workshop

./: main.py  pyproject.toml  testes.py
.github/workflows/: main.yaml
app/: .env.prod  config.py  data.py  main.py  model.py  router.py  schema.py
tests/: test_api.py
